--- a/home.html
+++ b/home.html
@@ -5,7 +5,23 @@
     </head>
     <body>
         <div class="content">
+            <h2>Activity</h2>
+            <div id="activity">
+                <div class="loader"></div>
+            </div>
         </div>
         <script src="/script.js"></script>
+        <script>
+            const activityContainer = document.getElementById("activity")
+            var activity = []
+            fetch("/api/activity?typecontraint=ActivityPriceChanged").then(res => res.json().then(res => {
+                activity = res
+                var html = ""
+                activity.forEach(a => {
+                    html += AutoFormat(a)
+                })
+                activityContainer.innerHTML = html
+            }))
+        </script>
     </body>
 </html>
