add server info page

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -15,7 +15,7 @@
                 <input type="button" value="Update server" onclick="Update()">
                 <div style="width: 90%; background-color: var(--hightlightColor); height: 10px;"><div style="background-color: var(--highlightedColor); height: 100%; width: 0%;" id="progress"></div></div>
                 <input type="button" value="View Console" onclick="location.href = '/console'">
-                <a href="/config" download="OculusDBConfig.json">Download config</a>
+                <a href="/api/config" download="OculusDBConfig.json">Download config</a>
                 <input type="button" value="Upload Config" onclick="Config()">
                 <table>
                     <tr>
@@ -32,7 +32,7 @@
         
         <script src="/script.js"></script>
         <script>
-            fetch("/servermetrics").then(res => res.json().then(res => {
+            fetch("/api/servermetrics").then(res => res.json().then(res => {
                 document.getElementById("ram").innerHTML = res.ramUsageString
                 document.getElementById("working").innerHTML = res.workingDirectory
             }))
@@ -64,7 +64,7 @@
 
                             }
                         }, false);
-                        xhr.open("POST", "/updateserver?changelog=" + changelog)
+                        xhr.open("POST", "/api/updateserver?changelog=" + changelog)
                         xhr.send(reader.result)
 
                     }
@@ -85,7 +85,7 @@
                     var reader = new FileReader();
                     var fileName = this.files[0].name
                     reader.onloadend = function () {
-                        fetch("/config", {
+                        fetch("/api/config", {
                             method: "POST",
                             body: reader.result
                         }).then(res => res.text().then(res => alert(res)))
