--- a/frontend/home.html
+++ b/frontend/home.html
@@ -5,7 +5,24 @@
     </head>
     <body>
         <div class="content">
-            <h2>Activity</h2>
+            
+            <div>
+                <h2>Welcome to Oculus DB</h2>
+                <h5><i>A work in progress Oculus exploring and monitoring service</i></h5>
+                OculusDB monitores the entirety of Oculus with it's own database which gets completly updated about once a day (estimate)
+                <br>
+                <h3>Database info</h3>
+                All dates you'll seeon this site will be in your timezone
+                <h3>Download info</h3>
+                Downloads may only work if you are logged in on <a href="https://oculus.com">https://oculus.com</a> with your Oculus Account which owns the game you want to download.
+                <h3>Project info</h3>
+                As OculusDB is work in progress some features are missing. You can check the ToDo list <a href="https://github.com/ComputerElite/OculusDB/projects/1">here</a>.
+                <br>
+                If you got any requests for what to add to OculusDB or feedback about the website itself feel free to tell me <a href="https://github.com/ComputerElite/OculusDB/issues">via GitHub Issues</a>.
+                <br>
+                If you have experience in designing pictograms or logos I'd be happy if you hit me up on Discord as I want to add a few pictograms here and there. To message me join the <a href="https://discord.gg/MrwMx5e">Beat Saber Legacy Group Discord Server</a>.
+            </div>
+            <h2>Recent Activity</h2>
             <label class="checkmarkContainer">Show Updates
                 <input id="vers" type='checkbox' onclick='Update()'>
                 <span class="checkmark"></span>
