--- a/frontend/server.html
+++ b/frontend/server.html
@@ -5,12 +5,16 @@
     </head>
     <body>
         <div class="content">
-            <h1>Database info</h1>
+            <h2>General info</h1>
+            All data is being gathered from Oculus GraphQL api at <a href="https://graphql.oculus.com/graphql">https://graphql.oculus.com/graphql</a>.
+            <br>
+
+            <h2>Database info</h1>
             <div id="db">
                 <div class="loader"></div>
             </div>
             
-            <h1>Recent Server Updates</h1>
+            <h2>Recent Server Updates</h1>
             <div id="updates">
 
             </div>
@@ -22,7 +26,7 @@
                 res.forEach(x => {
                     updates += `
                     <div>
-                        <h3>Update on ${new Date(x.time).toLocaleString()}</h3>
+                        <h4>Update on ${new Date(x.time).toLocaleString()}</h4>
                         ${x.changelog}
                     </div>
                     `
