--- a/frontend/login.html
+++ b/frontend/login.html
@@ -17,7 +17,7 @@
         <script src="/script.js"></script>
         <script>
             function Login() {
-                fetch("/login", {
+                fetch("/api/login", {
                     method: "POST",
                     body: JSON.stringify({
                         password: document.getElementById("password").value
