a lot a lot of stuff. less db space taken up, faster scrape starting, a few graphql requests less and more

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -7,6 +7,9 @@
                 margin: 5px;
             }
         </style>
+        <meta property="og:title" content="Admin panel - OculusDB">
+        <meta property="og:description" content="Why can you see this">
+        {meta}
     </head>
     <body>
         <div class="content">
