--- a/frontend/id.html
+++ b/frontend/id.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css" >
+        <meta property="og:title" content="Information about an app - OculusDB">
+        <meta property="og:description" content="Due to delay concerns the app name can not be shown in this info">
+        {meta}
     </head>
     <body>
         <div class="content">
