--- a/frontend/server.html
+++ b/frontend/server.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css" >
+        <meta property="og:title" content="Server - OculusDB">
+        <meta property="og:description" content="Various information about OculusDB and its server">
+        {meta}
     </head>
     <body>
         <div class="content">
