--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css" >
+        <meta property="og:title" content="Activity - OculusDB">
+        <meta property="og:description" content="Information about some activity">
+        {meta}
     </head>
     <body>
         <div class="content">
