--- a/frontend/console.html
+++ b/frontend/console.html
@@ -3,6 +3,9 @@
     <head>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
         <link href='/style.css' rel='stylesheet' type='text/css'>
+        <meta property="og:title" content="Live console - OculusDB">
+        <meta property="og:description" content="Why can you see this">
+        {meta}
     </head>
     <body>
         <div class="content">
