--- a/frontend/home.html
+++ b/frontend/home.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css" >
+        <meta property="og:title" content="OculusDB">
+        <meta property="og:description" content="Get info of any app on oculus and monitor it">
+        <meta name="google-site-verification" content="0UWk3BxSZQEsUvTS6W6NuN71Zcv9XDiBPUXGO_0llJM" />
+        {meta}
     </head>
     <body>
         <div class="content">
