--- a/frontend/recentactivity.html
+++ b/frontend/recentactivity.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <link rel="stylesheet" href="/style.css">
+    <meta property="og:title" content="Recent activity - OculusDB">
+    <meta property="og:description" content="Recent activity such as price changes, new applications, new versions and new dlcs of Oculus">
+    {meta}
 </head>
 <body>
     <div class="content">
