--- a/frontend/search.html
+++ b/frontend/search.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css" >
+        <meta property="og:title" content="Search - OculusDB">
+        <meta property="og:description" content="Search OculusDB">
+        {meta}
     </head>
     <body>
         <div class="content">
