add ComputerAnalytics, add application headsets to search results

--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css" >
-        <meta property="og:title" content="Activity - OculusDB">
+        <title>Activity - OculusDB</title>
         <meta property="og:description" content="Information about some activity">
         {meta}
     </head>
