--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -7,7 +7,7 @@
                 margin: 5px;
             }
         </style>
-        <meta property="og:title" content="Admin panel - OculusDB">
+        <title>Admin panel - OculusDB</title>
         <meta property="og:description" content="Why can you see this">
         {meta}
     </head>
