--- a/frontend/id.html
+++ b/frontend/id.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css" >
-        <meta property="og:title" content="Information about an app - OculusDB">
-        <meta property="og:description" content="Due to delay concerns the app name can not be shown in this info">
+        <title>Information - OculusDB</title>
+        <meta property="og:description" content="Shows information about an version, app or dlc">
         {meta}
     </head>
     <body>
