--- a/frontend/login.html
+++ b/frontend/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css" >
-        <meta property="og:title" content="Login - OculusDB">
+        <title>Login - OculusDB</title>
         <meta property="og:description" content="Login to your OculusDB account">
         {meta}
     </head>
