--- a/frontend/recentactivity.html
+++ b/frontend/recentactivity.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="/style.css">
-    <meta property="og:title" content="Recent activity - OculusDB">
+    <title>Recent activity - OculusDB</title>
     <meta property="og:description" content="Recent activity such as price changes, new applications, new versions and new dlcs of Oculus">
     {meta}
 </head>
