--- a/frontend/search.html
+++ b/frontend/search.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css" >
-        <meta property="og:title" content="Search - OculusDB">
+        <title>Search - OculusDB</title>
         <meta property="og:description" content="Search OculusDB">
         {meta}
     </head>
