--- a/frontend/server.html
+++ b/frontend/server.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css" >
-        <meta property="og:title" content="Server - OculusDB">
+        <title>Server - OculusDB</title>
         <meta property="og:description" content="Various information about OculusDB and its server">
         {meta}
     </head>
