--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="/style.css" >
         <title>Activity - OculusDB</title>
+        <meta property="og:title" content="Activity - OculusDB">
         <meta property="og:description" content="Information about some activity">
         {meta}
     </head>
