--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -8,6 +8,7 @@
             }
         </style>
         <title>Admin panel - OculusDB</title>
+        <meta property="og:title" content="Admin panel - OculusDB">
         <meta property="og:description" content="Why can you see this">
         {meta}
     </head>
