--- a/frontend/id.html
+++ b/frontend/id.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="/style.css" >
         <title>Information - OculusDB</title>
+        <meta property="og:title" content="Information - OculusDB">
         <meta property="og:description" content="Shows information about an version, app or dlc">
         {meta}
     </head>
