--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="/style.css" >
         <title>Login - OculusDB</title>
+        <meta property="og:title" content="Login - OculusDB">
         <meta property="og:description" content="Login to your OculusDB account">
         {meta}
     </head>
