--- a/frontend/recentactivity.html
+++ b/frontend/recentactivity.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="/style.css">
     <title>Recent activity - OculusDB</title>
+    <meta property="og:title" content="Recent activity - OculusDB">
     <meta property="og:description" content="Recent activity such as price changes, new applications, new versions and new dlcs of Oculus">
     {meta}
 </head>
