--- a/frontend/search.html
+++ b/frontend/search.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="/style.css" >
         <title>Search - OculusDB</title>
+        <meta property="og:title" content="Search - OculusDB">
         <meta property="og:description" content="Search OculusDB">
         {meta}
     </head>
