--- a/frontend/server.html
+++ b/frontend/server.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="/style.css" >
         <title>Server - OculusDB</title>
+        <meta property="og:title" content="Server - OculusDB">
         <meta property="og:description" content="Various information about OculusDB and its server">
         {meta}
     </head>
