--- a/frontend/home.html
+++ b/frontend/home.html
@@ -1,16 +1,15 @@
 ﻿<!DOCTYPE html>
 <html>
     <head>
+        {meta}
         <link rel="stylesheet" href="/style.css" >
-        <title>OculusDB</title>
-        <meta property="og:title" content="OculusDB">
+        <title>Home - OculusDB</title>
+        <meta property="og:title" content="Home - OculusDB">
         <meta property="og:description" content="Get info of any app on oculus and monitor it">
         <meta name="google-site-verification" content="0UWk3BxSZQEsUvTS6W6NuN71Zcv9XDiBPUXGO_0llJM" />
-        {meta}
     </head>
     <body>
         <div class="content">
-            
             <div>
                 <h2>Welcome to Oculus DB</h2>
                 <h5><i>A work in progress but functional Oculus exploring and monitoring service</i></h5>
