--- a/frontend/server.html
+++ b/frontend/server.html
@@ -12,6 +12,8 @@
             <h2>General info</h1>
             All data is being gathered from Oculus GraphQL api at <a href="https://graphql.oculus.com/graphql">https://graphql.oculus.com/graphql</a>.
             <br>
+            Oculus DB is <a href="https://github.com/ComputerElite/OculusDB">Open Source</a> and has been created by <a href="https://computerelite.github.io">ComputerElite</a>
+            <br>
 
             <h2>Database info</h1>
             <div id="db">
@@ -37,6 +39,30 @@
                 })
                 document.getElementById("updates").innerHTML = updates
             }))
+
+function Format(res) {
+    var links = []
+    const websiteRegex = /https?\:\/\/([^ ()\n\t]+(\/)?)/g
+    while ((match = websiteRegex.exec(res)) !== null) {
+        var replacement = `<a href="${match[0]}" target="_blank">${match[0]}</a>`
+        links.push({
+            absolute: replacement,
+            relative: match[0],
+            start: match.index,
+            end: websiteRegex.lastIndex
+        })
+    }
+    var length = 0
+    links.forEach(link => {
+        res = res.substring(0, link.start + length) + res.substring(link.end + length, res.length)
+        res = InsertString(link.absolute, link.start + length, res)
+        length += link.absolute.length - link.relative.length
+    })
+    res = res.replace(/\n/g, "<br>")
+    res = res.replace(/\t/g, "&emsp;&emsp;&emsp;&emsp;")
+    return res.replace("\\n", "<br>")
+}
+
             fetch("/api/database").then(res => res.json().then(res => {
                 document.getElementById("db").innerHTML = `
                 <table>
