--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,13 +14,26 @@
                 Token
                 <input type="password" id="password" style="width: max-content;">
             </label>
-            <input type="button" value="Login" onclick="Login()">
+            <input type="button" value="Login" id="b" onclick="Login()">
             <div class="textbox" id="status"></div>
         </div>
         
         <script src="/script.js"></script>
         <script>
+            const b = document.getElementById("b")
+            var currentUser = {}
+
+            fetch("/api/user?token=" + GetCookie("token")).then(res => {
+                res.json().then(res => {
+                    currentUser = res
+                    if(res.redirect == "/admin") b.value = "Admin"
+                })
+            })
+
             function Login() {
+                if(password.value == "") {
+                    window.location.href = currentUser.redirect
+                }
                 fetch("/api/login", {
                     method: "POST",
                     body: JSON.stringify({
