--- a/frontend/server.html
+++ b/frontend/server.html
@@ -33,35 +33,35 @@
                     updates += `
                     <div>
                         <h4>Update on ${new Date(x.time).toLocaleString()}</h4>
-                        ${x.changelog}
+                        ${Format(x.changelog)}
                     </div>
                     `
                 })
                 document.getElementById("updates").innerHTML = updates
             }))
 
-function Format(res) {
-    var links = []
-    const websiteRegex = /https?\:\/\/([^ ()\n\t]+(\/)?)/g
-    while ((match = websiteRegex.exec(res)) !== null) {
-        var replacement = `<a href="${match[0]}" target="_blank">${match[0]}</a>`
-        links.push({
-            absolute: replacement,
-            relative: match[0],
-            start: match.index,
-            end: websiteRegex.lastIndex
-        })
-    }
-    var length = 0
-    links.forEach(link => {
-        res = res.substring(0, link.start + length) + res.substring(link.end + length, res.length)
-        res = InsertString(link.absolute, link.start + length, res)
-        length += link.absolute.length - link.relative.length
-    })
-    res = res.replace(/\n/g, "<br>")
-    res = res.replace(/\t/g, "&emsp;&emsp;&emsp;&emsp;")
-    return res.replace("\\n", "<br>")
-}
+            function Format(res) {
+                var links = []
+                const websiteRegex = /https?\:\/\/([^ ()\n\t]+(\/)?)/g
+                while ((match = websiteRegex.exec(res)) !== null) {
+                    var replacement = `<a href="${match[0]}" target="_blank">${match[0]}</a>`
+                    links.push({
+                        absolute: replacement,
+                        relative: match[0],
+                        start: match.index,
+                        end: websiteRegex.lastIndex
+                    })
+                }
+                var length = 0
+                links.forEach(link => {
+                    res = res.substring(0, link.start + length) + res.substring(link.end + length, res.length)
+                    res = InsertString(link.absolute, link.start + length, res)
+                    length += link.absolute.length - link.relative.length
+                })
+                res = res.replace(/\n/g, "<br>")
+                res = res.replace(/\t/g, "&emsp;&emsp;&emsp;&emsp;")
+                return res.replace("\\n", "<br>")
+            }
 
             fetch("/api/database").then(res => res.json().then(res => {
                 document.getElementById("db").innerHTML = `
@@ -72,6 +72,10 @@ function Format(res) {
                     <tr><td class="label">Activity entries</td><td class="value">${res.activityDocuments}</td></tr>
                 </table>`
             }))
+
+            function InsertString(toInsert, position, text) {
+                return [text.slice(0, position), toInsert, text.slice(position)].join('')
+            }
         </script>
     </body>
 </html>
