--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -36,7 +36,7 @@
                 document.getElementById("id").innerHTML = activity.__id
                 document.getElementById("lastUpdated").innerHTML = new Date(activity.__lastUpdated).toLocaleString()
                 document.getElementById("this").innerHTML = AutoFormat(activity)
-                RevealDescription(activity.id)
+                RevealDescription(activity.__id)
             }).catch(err => {
                 if(err == 404) {
                     alert("The item has not been found")
