add hover hints to frontend, something else, maybe fix random crashs on db errors

--- a/frontend/id.html
+++ b/frontend/id.html
@@ -92,7 +92,7 @@
                         x: x,
                         y: y,
                         line: {
-                            shape: "vh",
+                            shape: "hv",
                             color: "#63FAC3"
                         }
                     }], {
