--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -12,8 +12,8 @@
             <h2>OculusDB Info</h2>
             <a href="/api/activityid/{0}">Raw Json</a>
             <table>
-                <tr><td>OculusDB Type</td><td id="type">Fetching...</td></tr>
-                <tr><td>Activity id</td><td id="id">Fetching...</td></tr>
+                <tr class="label"><td>OculusDB Type</td><td id="type">Fetching...</td></tr>
+                <tr class="label"><td>Activity id</td><td id="id">Fetching...</td></tr>
                 <tr><td>Last Updated</td><td id="lastUpdated">Fetching...</td></tr>
             </table>
             <div>
