--- a/frontend/id.html
+++ b/frontend/id.html
@@ -12,8 +12,8 @@
             <h2>OculusDB Info</h2>
             <a href="/api/id/{0}">Raw Json</a>
             <table>
-                <tr><td>OculusDB Type</td><td id="type">Fetching...</td></tr>
-                <tr><td>Last Updated</td><td id="lastUpdated">Fetching...</td></tr>
+                <tr><td class="label">OculusDB Type</td><td id="type">Fetching...</td></tr>
+                <tr><td class="label">Last Updated</td><td id="lastUpdated">Fetching...</td></tr>
             </table>
             <div>
                 <h2>This</h2>
