--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="content">
-            <h2>Please note that user logins are work in progress and will be added at a later point in time</h2>
+            <h2>Only administrators can sign in</h2>
             <label >
                 Token
                 <input type="password" id="password" style="width: max-content;">
