--- a/frontend/home.html
+++ b/frontend/home.html
@@ -17,8 +17,8 @@
                     <input type="button" onclick="Search('query2')" value="Search">
                 </div>
                 <h2>Welcome to Oculus DB</h2>
-                <h5><i>A work in progress but functional Oculus exploring and monitoring service</i></h5>
-                OculusDB monitores the entirety of Oculus with it's own database which gets completly updated about once a day (estimate)
+                <h5><i>An Oculus exploring and monitoring service</i></h5>
+                OculusDB monitores the entirety of Oculus with it's own database which gets completly updated about every 6 hours (estimate)
                 <br>
                 <h3>Database info</h3>
                 All dates you'll see on this site will be in your timezone.
@@ -27,7 +27,7 @@
                 <h3>Download info</h3>
                 <b>Downloads</b> may <b>only work</b> if you are <b>logged in on <a href="https://oculus.com">https://oculus.com</a></b> with your Oculus Account which owns the game you want to download.
                 <h3>Project info</h3>
-                As OculusDB is work in progress some features are missing. You can check the ToDo list <a href="https://github.com/ComputerElite/OculusDB/projects/1">here</a>.
+                OculusDB is always in development. You can check the ToDo list <a href="https://github.com/ComputerElite/OculusDB/projects/1">here</a>.
                 <br>
                 If you got any requests for what to add to OculusDB or feedback about the website itself feel free to tell me <a href="https://github.com/ComputerElite/OculusDB/issues">via GitHub Issues</a>.
                 <br>
